--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
+  <<: *default
   adapter: pg
   datbase: db/production.pg
-  # <<: *default
   # database: db/production.sqlite3
